traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:21: error: not found: value Direction
  if (getDirection()==Direction.EAST){
                      ^TraversalZigZag:26: error: not found: value Direction
      setDirection(Direction.WEST)
                   ^TraversalZigZag:33: error: not found: value Direction
      setDirection(Direction.EAST)
                   ^