traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt=0
  do{
  	ecritMessage(cpt)
    bouge()
    cpt+=1
  }while(!fini())
  ecritMessage(cpt)
}

def fini() : Boolean = {
  if (getMondeHauteur()-1==getY()){
    if (getMondeLargeur()-1==getX()) 
      return true
  }
    return false
}  

def bouge(){
  var Y=getY()
  var X=getX()
  if (getDirection()==Direction.EAST){
    if (X!=getMondeLargeur()-1)
    	setPos(X+1,Y)
    else {
    	setPos(X,Y+1)
      setDirection(Direction.WEST)
    }
  }else{
    if (X!=0)
    	setPos(X-1,Y)
    else {
    	setPos(X,Y+1)
    	setDirection(Direction.EAST)
    }
  }
}